--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=backend-starter
+
+spring.datasource.url=jdbc:postgresql://localhost:5332/umsstarter
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.open-in-view = false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
