--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,19 @@ services:
       retries: 5
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  redis:
+    container_name: redis
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+    command: [ "redis-server", "--appendonly", "yes" ]
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
 volumes:
   postgres_data:
     driver: local
