--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,16 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+  minio:
+    image: quay.io/minio/minio:RELEASE.2024-04-18T19-09-19Z-cpuv1
+    container_name: minio
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin123
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000" # S3 API
+      - "9001:9001" # Console UI
 
   app:
     build:
