--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,3 +21,13 @@ security.jwt.expMinutes=720
 spring.cache.type=redis
 spring.data.redis.host=redis
 spring.data.redis.port=6379
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+# MinIO
+minio.endpoint=http://minio:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin123
+minio.region=us-east-1
+minio.bucket=umsstarter
+minio.enable-path-style=true
+minio.file-signature-duration=1440
